--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 <title>My Home Page</title>
+  <style>
+    #main{
+      width: 100px;
+      heignt: 100px;
+      backgroud: dogerblue;
+    }
+  </style>
 <head>
 <body>
 <a href="#"><li>Project Work</li></a>
+  <p>i commit some changes.. <p/>
+  <div id="main"></div>
 </head>
 </body>
 </html>
